# filament-mixer

./: .gitignore  BREADCRUMB.md  CLAUDE.md  EXPERIMENTS.md  README.md  pyproject.toml
benchmarks/: README.md  compare.py  compare_output.txt  compare_poly.py  compare_with_lut.py  detailed_metrics.py  experiment_f_poly_clamped.json  metrics_results.json  visual_compare.py  visual_compare_poly_clamped.py
cpp/: CMakeLists.txt  README.md  example.cpp  filament_mixer.h  filament_mixer_data.inc
docs/: BREADCRUMB.md  CLAUDE.md  EXPERIMENTS.md  LUT_GENERATION.md
examples/: slicer_demo.py  visual_demo.py
models/: poly_model.pkl
scripts/: experiment_gp.py  experiment_logit_poly.py  experiment_poly_clamped.py  experiment_polynomial.py  experiment_wondermixer.py  export_poly_coefficients.py  export_poly_td3_coefficients.py  generate_lut.py  lut_demo.py  optimize_green.py  optimize_pigments.py  train_gp_model.py  train_poly_model.py
src/filament_mixer/: __init__.py  api.py  gp_mixer.py  km_core.py  lut.py  pigments.py  poly_mixer.py  unmixer.py
tests/: test_mixing.py  test_poly_mixer.py
